commit desde la rama fondo

--- a/blog-single/3-piscinas.html
+++ b/blog-single/3-piscinas.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a  href="../index.html">
-                        <img src="../img/logo/LOGO BLANCO .png" class="img-fluid" alt="">
+                        <img src="../img/logo/LOGO BLANCO .png" class="img-fluid" alt="logo-destinos-quillabamba">
                     </a>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -66,7 +66,7 @@
                         </li>
                         <div class="logo">
                             <a href="../index.html">
-                                <img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
+                                <img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="slogan-destinos-quillabamba">
                             </a>
                         </div>
                         <li class="nav-item">
@@ -195,7 +195,7 @@
             </div>
             <div class="col-md-4">
                 <!-- <div class="mt-5 mb-4 py-5">
-                    <div class="fb-page" data-href="https://www.facebook.com/DestinosQuillabamba/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/DestinosQuillabamba/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/DestinosQuillabamba/">Destinos Quillabamba</a></blockquote></div>
+                    <div class="fb-page" data-href="https://www.facebook.com/DestinosQuillabamba/" data-tabs="timeline" data-width="350" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/DestinosQuillabamba/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/DestinosQuillabamba/">Destinos Quillabamba</a></blockquote></div>
                 </div> -->
                 <hr>
                 <div class="single-side-bar mt-5">
