--- a/nosotros.html
+++ b/nosotros.html
@@ -24,6 +24,11 @@
     <header class="site-cover overlay" style="background-image: url(img/hero_bg_1.jpg); background-attachment: fixed;">
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <div class="container">
+                <div class="navbar-brand visible-xs">
+                    <a href="index.html">
+                        <img src="img/logo/LOGO BLANCO .png" class="img-fluid" alt="logo destinos Quillabamba">
+                    </a>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,11 +44,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="galeria.html">Galeria</a>
                         </li>
-                        <a href="index.html">
-                            <div class="logo">
-                                <img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
-                            </div>
-                        </a>
+                        <div class="logo">
+                            <a href="index.html">
+                                <img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="logo destinos Quillabamba">
+                            </a>
+                        </div>
                         <li class="nav-item">
                             <a class="nav-link" href="videos.html">Videos</a>
                         </li>
@@ -221,10 +226,10 @@
                 <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
                     <h3>Encuentranos en</h3>
                     <ul class="footer_social list-unstyled">
-                        <li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
-                        <li class="so0cial_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
-                        <li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
-                        <li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
+                        <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
+                        <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
+                        <li class="social_animate"><a class="icon-3" href="https://www.instagram.com/destinosQuillabamba/" target="_blank"><span class="icon-instagram"></span></a></li>
+                        <li class="social_animate"><a class="icon-4" href="https://www.youtube.com/channel/UCRfQ0fIHHx4RrjdH5eFfi7Q" target="_blank"><span class="icon-youtube"></span></a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
