--- a/contacto.html
+++ b/contacto.html
@@ -79,27 +79,36 @@
         <div class="container">
             <div class="row">
                 <div class="col wow slideInLeft">
-                    <h2 class="h1-responsive font-weight-bold text-center my-4">Contátecnos</h2>
-                    <p class="text-center w-responsive mx-auto mb-5">¿Tiene usted alguna pregunta? Por favor no dude en contactarnos directamente. Nuestro equipo regresará a usted en cuestión de horas para ayudarlo.</p>
+                    <h2 class="h1-responsive font-weight-bold text-center my-4">Contáctenos</h2>
+                    <p class="text-center w-responsive mx-auto mb-5">¿Tiene usted alguna pregunta? Por favor no dude en contactarnos directamente. Nuestro equipo estara disponible las 24 horas para ayudarlo.</p>
                 </div>
             </div>
             <div class="row d-flex contact-info">
-                <div class="col-md-3 d-flex">
+                <div class="col-sm-6 col-md-3 d-flex">
                     <div class="align-self-stretch box p-4 text-center">
                         <div class="icon d-flex align-items-center justify-content-center">
                             <span class="icon-map-signs"></span>
                         </div>
                         <h3 class="mb-4">Dirección</h3>
-                        <p>Av. Bolognesi. Quillabamba, Cusco, Perú</p>
+                        <p>Av. Francisco Bolognesi 249. Quillabamba, Cusco, Perú</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 d-flex">
+                    <div class="align-self-stretch box p-4 text-center">
+                        <div class="icon d-flex align-items-center justify-content-center">
+                            <span class="icon-phone"></span>
+                        </div>
+                        <h3 class="mb-4">Teléfono</h3>
+                        <p>084 212447</p>
                     </div>
                 </div>
                 <div class="col-md-3 d-flex">
                     <div class="align-self-stretch box p-4 text-center">
                         <div class="icon d-flex align-items-center justify-content-center">
-                            <span class="icon-phone"></span>
+                            <span class="icon-earth"></span>
                         </div>
-                        <h3 class="mb-4">Número</h3>
-                        <p>+51 986-571790</p>
+                        <h3 class="mb-4">Facebook</h3>
+                        <p>DestinosQuillabamba</p>
                     </div>
                 </div>
                 <div class="col-md-3 d-flex">
@@ -108,16 +117,7 @@
                             <span class="icon-paper-plane"></span>
                         </div>
                         <h3 class="mb-4">Correo</h3>
-                        <p>info@destinosquillabamba.com</p>
-                    </div>
-                </div>
-                <div class="col-md-3 d-flex">
-                    <div class="align-self-stretch box p-4 text-center">
-                        <div class="icon d-flex align-items-center justify-content-center">
-                            <span class="icon-earth"></span>
-                        </div>
-                        <h3 class="mb-4">Sitio Web</h3>
-                        <p>destinosquillabamba.com</p>
+                        <p class="text-center">info@destinosquillabamba.com</p>
                     </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
                     <div class="text-center text-md-left pb-4 d-flex justify-content-center align-items-center">
                         <button class="btn btn-primary" id="enviar" onclick="validateForm()">Enviar</button>
                      </div>
-                    <div class="status" id="status"></div>
+                    <div class="status text-center py-2" id="status"></div>
                 </div>
                 <div class="col-12 col-md-7 col-lg-7 content-mapa">
                     <div id="map" class="mapa pb-4"></div>
@@ -219,10 +219,10 @@
                 </button>
             </div>
             <div class="modal-body">
-        6 weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
-                    <script>
-                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-                    </script>
+                <a class="weatherwidget-io" href="https://forecast7.com/es/n13d52n71d99/santa-ana/?unit=us" data-label_1="Santa Ana" data-label_2="Quillabamba" data-theme="original" >Santa Ana Quillabamba</a>
+                <script>
+                !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                </script>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
@@ -249,10 +249,10 @@
                 <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
                     <h3>Encuentranos en</h3>
                     <ul class="footer_social list-unstyled">
-                        <li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
-                        <li class="so0cial_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
-                        <li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
-                        <li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
+                        <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
+                        <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
+                        <li class="social_animate"><a class="icon-3" href="https://www.instagram.com/destinosQuillabamba/" target="_blank"><span class="icon-instagram"></span></a></li>
+                        <li class="social_animate"><a class="icon-4" href="https://www.youtube.com/channel/UCRfQ0fIHHx4RrjdH5eFfi7Q" target="_blank"><span class="icon-youtube"></span></a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
@@ -261,8 +261,8 @@
                         <div class="questions_icon">
                             <ul>
                                 <li><span class="icon icon-location2"></span>
-                                    <span class="text">Av. Bolognesi. <br>
-                                        Quillabamba, Cusco, Perú</span>
+                                    <span class="text">Av. Francisco Bolognesi 249. <br>
+                                    Quillabamba, Cusco, Perú</span>
                                 </li>
                                 <li><span class="icon icon-phone"></span>
                                     <span class="text">+51 986-571790</span>
