--- a/galeria.html
+++ b/galeria.html
@@ -25,6 +25,11 @@
     <header class="site-cover overlay" style="background-image: url(img/hero_bg_3.jpg); background-attachment: fixed;">
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
+                <div class="navbar-brand visible-xs">
+                    <a href="index.html">
+                        <img src="img/logo/LOGO BLANCO .png" class="img-fluid" alt="logo destinos Quillabamba">
+                    </a>
+                </div>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -41,11 +46,11 @@
 						<li class="nav-item">
 							<a class="nav-link" href="galeria.html">Galeria</a>
 						 </li>
-						<a href="index.html">
-							<div class="logo">
-								<img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
-							</div>
-                        </a>
+                         <div class="logo">
+						    <a href="index.html">
+								<img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="logo-destinos-quillabmaba">
+                            </a>
+                        </div>
                         <li class="nav-item">
                             <a class="nav-link" href="videos.html">Videos</a>
                         </li>
@@ -100,7 +105,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt=""></div>
+                    <div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt="icon-placeholder"></div>
                     <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
                     <div class="footer_contact_btn">
                         <a href="#!" class="primary-btn" >Leer más</a>
@@ -146,22 +151,22 @@
                 <div class="row">
                     <div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
                         <div class="footer_dest text-center">
-                            <div class="logo-footer"><img src="img/logo/Recurso 2.png" alt=""></div>
+                            <div class="logo-footer"><img src="img/logo/Recurso 2.png" alt="logo-destinos-quillabmaba"></div>
                             <h2 class="title-logo mt-3">Destinos Quillabamba</h2>
                         </div>
                     </div>
                     <div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
                         <div class="footer_dest text-center">
-                            <div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt=""></div>
+                            <div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt="slogan-destinos-quillabamba"></div>
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
                         <h3>Encuentranos en</h3>
                         <ul class="footer_social list-unstyled">
-                            <li class="social_animate"><a class="icon-1" href="#"><span class="icon-twitter"></span></a></li>
-                            <li class="so0cial_animate"><a class="icon-2" href="#"><span class="icon-facebook"></span></a></li>
-                            <li class="social_animate"><a class="icon-3" href="#"><span class="icon-instagram"></span></a></li>
-                            <li class="social_animate"><a class="icon-4" href="#"><span class="icon-youtube"></span></a></li>
+                            <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
+                            <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
+                            <li class="social_animate"><a class="icon-3" href="https://www.instagram.com/destinosQuillabamba/" target="_blank"><span class="icon-instagram"></span></a></li>
+                            <li class="social_animate"><a class="icon-4" href="https://www.youtube.com/channel/UCRfQ0fIHHx4RrjdH5eFfi7Q" target="_blank"><span class="icon-youtube"></span></a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
