--- a/paquetes/experiencia-2.html
+++ b/paquetes/experiencia-2.html
@@ -36,7 +36,7 @@
     <!-- fanpage -->
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.3"></script>
-    <header>
+    <header class="site-cover overlay" style="background-image: url(../img/hero_bg_1.jpg); background-attachment: fixed;">
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <div class="container">
                 <div class="navbar-brand">
@@ -59,11 +59,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../galeria.html">Galeria</a>
                         </li>
-                        <a href="../index.html">
-                            <div class="logo">
+                        <div class="logo">
+                            <a href="../index.html">
                                 <img src="../img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="">
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                         <li class="nav-item">
                             <a class="nav-link" href="../videos.html">Videos</a>
                         </li>
@@ -77,19 +77,12 @@
                 </div>
             </div>
         </nav>
-        <div class="site-cover overlay" style="background-image: url(../img/hero_bg_1.jpg); background-attachment: fixed;">
+        <div>
             <div class="container">
                 <div class="row align-items-center justify-content-center text-center" data-scrollax-parent="true">
                     <div class="col-md-8" data-scrollax=" properties: { translateY: '70%' }">
                         <h1 class="text-white text-uppercase" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Tours</h1>
                         <div data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="index.html">Home</a> <span class="mx-2 text-white">&bullet;</span> <span class="text-white">Tour</span></div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="container">
-                        <div class="col">
-                            <button type="button" class="scroll_down" id="scroll_down"></button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -303,7 +296,7 @@
                         </div>
                     </div>
                     <div class="my-3">
-                        <div class="fb-page" data-href="https://www.facebook.com/DestinosQuillabamba/" data-tabs="timeline" data-width="400" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/DestinosQuillabamba/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/DestinosQuillabamba/">Destinos Quillabamba</a></blockquote></div>
+                        <div class="fb-page" data-href="https://www.facebook.com/DestinosQuillabamba/" data-tabs="timeline" data-width="350" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/DestinosQuillabamba/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/DestinosQuillabamba/">Destinos Quillabamba</a></blockquote></div>
                     </div>
                     <div class="mt-4">
                         <ins class="bookingaff" data-aid="1756011" data-target_aid="1756011" data-prod="banner" data-width="300" data-height="250" data-lang="en">
