--- a/destinos-2.html
+++ b/destinos-2.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="nosotros">nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="destinos-1">Destinos</a>
+                            <a class="nav-link" href="destinos">Destinos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="galeria">Galeria</a>
@@ -114,23 +114,23 @@
 			<div class="row justify-content-center pb-5 wow fadeInUp">
 				<div class="col-md-12 heading-section text-center">
 					<h2 class="mb-4">Los mejores destinos</h2>
-					<p>Te mostramos los mejores destinos que puedes elegir y vivir una experiencia unica</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi magni vel eaque aliquam iure voluptatibus.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 wow bounceInUp">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/destination.jpg" class="img-fluid" alt="Chichima-miniatura">
+							<img src="img/mini-destinos/mandor/miniatura/miniaturas-de-destinos-Mandor.jpg" class="img-fluid" alt="mandor miniatura">
 						</div>
 						<div class="text">
 							<h4 class="price">treking</h4>
-							<a href="destinos/D-ATChichima">
-								<h3 class="text-center py-2">Atardecer de Chichima</h3>
+							<a href="destinos/D-Mandor">
+								<h3 class="text-center py-2">Cataratas de Yanay</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/mandor/miniatura/miniaturas-de-destinos-Mandor.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -138,16 +138,16 @@
 				<div class="col-md-3 animated wow bounceInUp" data-wow-duration="2s" data-wow-dealy="5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/abra-malaga-dia/miniatura/miniatura-abra-malaga.jpg" class="img-fluid" alt="abra-malaga-miniatura">
+							<img src="img/mini-destinos/Idma-esmeralda/miniatura/miniaturas-de-destinos-idma-esmeralda.jpg" class="img-fluid" alt="idma esmeralda">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-AbraMalaga">
-								<h3 class="text-center py-2">Abra Malaga</h3>
+							<a href="destinos/D-IdmaE">
+								<h3 class="text-center py-2">Idma esmeralda</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/abra-malaga-dia/miniatura/miniatura-abra-malaga.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Idma-esmeralda/miniatura/miniaturas-de-destinos-idma-esmeralda.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -155,16 +155,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="3s" data-wow-dealy="6s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/alfamayo/miniatura/miniaturas-de-destinos.jpg" class="img-fluid" alt="alfamayo-miniatura">
+							<img src="img/mini-destinos/Koribeni/miniatura/miniaturas-de-destinos-koribeni.jpg" class="img-fluid" alt="koribeni miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-Alfamayo">
+							<a href="destinos/D-Koribeni">
 								<h3 class="text-center py-2">Alfamayo</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/alfamayo/miniatura/miniaturas-de-destinos.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Koribeni/miniatura/miniaturas-de-destinos-koribeni.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -172,16 +172,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4s" data-wow-dealy="7s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/amanecer-en-torontoy/miniaturas/miniaturas-de-destinos-torontoy.jpg" class="img-fluid" alt="amancer-torontoy-miniatura">
+							<img src="img/mini-destinos/Madre-Selva/Miniatura/miniaturas-de-destinos-madre-selva.jpg" class="img-fluid" alt="madre selva miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-AmanecerTorontoy">
-								<h3 class="text-center py-2">Amanecer en Torontoy</h3>
+							<a href="destinos/D-MadreSelva">
+								<h3 class="text-center py-2">Madre Selva</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/amanecer-en-torontoy/miniaturas/miniaturas-de-destinos-torontoy.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Madre-Selva/Miniatura/miniaturas-de-destinos-madre-selva.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -189,16 +189,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="2s" data-wow-dealy="5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/Aputinya/miniatura/miniaturas-de-destinos-Aputinya.jpg" class="img-fluid" alt="-aputinya-miniatura">
+							<img src="img/mini-destinos/Parques-Quillbamba/miniatura/miniaturas-de-destinos-PARQUE-QUILLABAMBA.jpg" class="img-fluid" alt="parques de Quillabamba-miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-Aputinya">
-								<h3 class="text-center py-2">Aputinya</h3>
+							<a href="destinos/D-ParquesQuilla">
+								<h3 class="text-center py-2">Parques de Quillabamba</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/Aputinya/miniatura/miniaturas-de-destinos-Aputinya.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Parques-Quillbamba/miniatura/miniaturas-de-destinos-PARQUE-QUILLABAMBA.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -206,16 +206,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="3s" data-wow-dealy="6s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/Catarata-Villa-Rica/Miniatura/miniaturas-de-destinos-villa-rica.jpg" class="img-fluid" alt="villa-Rica-miniatura">
+							<img src="img/mini-destinos/Pongo-de-Mainique/miniatura/miniaturas-de-destinos-pongo-de-mainique.jpg" class="img-fluid" alt="Pongo de Mainique miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-CVillaRica">
-								<h3 class="text-center py-2">Villa Rica</h3>
+							<a href="destinos/D-PongoMainique">
+								<h3 class="text-center py-2">Pongo de Mainique</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/Catarata-Villa-Rica/Miniatura/miniaturas-de-destinos-villa-rica.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Pongo-de-Mainique/miniatura/miniaturas-de-destinos-pongo-de-mainique.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -223,16 +223,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4s" data-wow-dealy="7s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/Illapani/miniatura/miniaturas-de-destinos-Illapani.jpg" class="img-fluid" alt="Illapani-miniatura">
+							<img src="img/mini-destinos/Quillabamba/miniatura/miniaturas-de-destinos-Quillabamba.jpg" class="img-fluid" alt="Quillabamba miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-CatartaIllapani">
-								<h3 class="text-center py-2">Illapani</h3>
+							<a href="destinos/D-Quillabamba">
+								<h3 class="text-center py-2">Quillabamba</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/Illapani/miniatura/miniaturas-de-destinos-Illapani.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Quillabamba/miniatura/miniaturas-de-destinos-Quillabamba.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -240,16 +240,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4.5s" data-wow-dealy="5.5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/Chaupimayo-B/miniatura/miniaturas-de-destinos-Chaupimayo-b.jpg" class="img-fluid" alt="chaupimayo-miniatura">
+							<img src="img/mini-destinos/Salkanta-desde-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="img-fluid" alt="Salkntay miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-Chaupimayo">
-								<h3 class="text-center py-2">Chaupimayo B</h3>
+							<a href="destinos/D-SalkantydeChichima">
+								<h3 class="text-center py-2">Salkantay de Chichima</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/Chaupimayo-B/miniatura/miniaturas-de-destinos-Chaupimayo-b.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Salkanta-desde-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -257,16 +257,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="2s" data-wow-dealy="5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/Chinche-Maranura/Miniatura/miniaturas-de-destinos-Chinche.jpg" class="img-fluid" alt="chinche-maranura-miniatura">
+							<img src="img/mini-destinos/San-pedro/miniatura/miniaturas-de-destinos-san-pedro.jpg" class="img-fluid" alt="San Pedro miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-ChincheM">
-								<h3 class="text-center py-2">Chinche Maranura</h3>
+							<a href="destinos/D-SanPedro">
+								<h3 class="text-center py-2">San Pedro</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/Chinche-Maranura/Miniatura/miniaturas-de-destinos-Chinche.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/San-pedro/miniatura/miniaturas-de-destinos-san-pedro.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -274,16 +274,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="3s" data-wow-dealy="6s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/Echarati/Miniatura/miniaturas-de-destinos-echarati.jpg" class="img-fluid" alt="echarati-miniatura">
+							<img src="img/mini-destinos/Torontoypata/miniatura/miniaturas-de-destinos-torontoypata.jpg" class="img-fluid" alt="torontoypata miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-Echarati">
-								<h3 class="text-center py-2">Echarati</h3>
+							<a href="destinos/D-Torontoypata.html">
+								<h3 class="text-center py-2">Torontoypata</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/Echarati/Miniatura/miniaturas-de-destinos-echarati.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Torontoypata/miniatura/miniaturas-de-destinos-torontoypata.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -291,16 +291,16 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4s" data-wow-dealy="7s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/Forestación-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="img-fluid" alt="forestacion-chichima-miniatura">
+							<img src="img/mini-destinos/Tunkimayo/miniatura/miniatura-tunquiamyo.jpg" class="img-fluid" alt="Tunquimayo miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-ForestacionChichima">
-								<h3 class="text-center py-2">Forestación Chichima</h3>
+							<a href="destinos/D-Tunquimayo">
+								<h3 class="text-center py-2">Tunquimayo</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/Forestación-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Tunkimayo/miniatura/miniatura-tunquiamyo.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -308,16 +308,50 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="4.5s" data-wow-dealy="5.5s">
 					<div class="thumb">
 						<div class="img">
-							<img src="img/mini-destinos/huayllayoc/Miniatura/miniaturas-de-destinos-Huayllayoc.jpg" class="img-fluid" alt="Huayllayoc-miniatura">
+							<img src="img/mini-destinos/Urusayhua/miniatura/miniaturas-de-destinos-urusayhua.jpg" class="img-fluid" alt="Urusuayhua miniatura">
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
-							<a href="destinos/D-Huayllayoc">
-								<h3 class="text-center py-2">huayllayoc</h3>
+							<a href="destinos/D-Urusayhua">
+								<h3 class="text-center py-2">Urusayhua</h3>
 								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
 							</a>
 						</div>
-						<a href="img/mini-destinos/huayllayoc/Miniatura/miniaturas-de-destinos-Huayllayoc.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+						<a href="img/mini-destinos/Urusayhua/miniatura/miniaturas-de-destinos-urusayhua.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+							<span class="icon-enlarge2"></span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-3 wow bounceInUp" data-wow-duration="3s" data-wow-dealy="6s">
+					<div class="thumb">
+						<div class="img">
+							<img src="img/mini-destinos/Vuleta-al-Mundo/miniatura/miniaturas-de-destinos-vuelta-al-mundo.jpg" class="img-fluid" alt="Vuelta al Mundo miniatura">
+						</div>
+						<div class="text">
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-VueltaMundo">
+								<h3 class="text-center py-2">Vuelta la mundo</h3>
+								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+							</a>
+						</div>
+						<a href="img/mini-destinos/Vuleta-al-Mundo/miniatura/miniaturas-de-destinos-vuelta-al-mundo.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+							<span class="icon-enlarge2"></span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-3 wow bounceInUp" data-wow-duration="4s" data-wow-dealy="7s">
+					<div class="thumb">
+						<div class="img">
+							<img src="img/mini-destinos/Rio-Yoyato/miniatura/mini-yoyato.jpg" class="img-fluid" alt="Yoyato miniatura">
+						</div>
+						<div class="text">
+							<!-- <h4 class="price">$400</h4> -->
+							<a href="destinos/D-Yoyato">
+								<h3 class="text-center py-2">Yoyato</h3>
+								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+							</a>
+						</div>
+						<a href="img/mini-destinos/Rio-Yoyato/miniatura/mini-yoyato.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-enlarge2"></span>
 						</a>
 					</div>
@@ -327,17 +361,18 @@
 				<div class="col text-center d-flex justify-content-center">
 					<div class="pagination">
 						<ul>
-							<li class="disabled"><a href="#!">&lt;</a></li>
-							<li class="active"><a href="destinos"><span>1</span></a></li>
-							<li><a href="destinos-1">2</a></li>
-							<li><a href="destinos-1">&gt;</a></li>
+							<li><a href="destinos">&lt;</a></li>
+							<li><a href="destinos"><span>1</span></a></li>
+							<li class="active"><a href="destinos-1">2</a></li>
+							<li class="disabled"><a href="#!">&gt;</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
+	<!-- End destination section -->
+	
     <!-- Section Recoemnd -->
     <section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
         <div class="container">
@@ -487,19 +522,19 @@
         </div>
     </div>
     <!-- End modal -->
-<!-- Start Footer -->
+	<!-- Start Footer -->
 	<footer>
         <div class="container">
             <div class="row">
                 <div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
                     <div class="footer_dest text-center">
-                        <div class="logo-footer"><img src="img/logo/Recurso 2.png" alt=""></div>
+                        <div class="logo-footer"><img src="img/logo/Recurso 2.png" alt="logo destinos Quillabamba"></div>
                         <h2 class="title-logo mt-3">Destinos Quillabamba</h2>
                     </div>
                 </div>
                 <div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
                     <div class="footer_dest text-center">
-                        <div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt=""></div>
+                        <div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt="slogan-destinos-quillabamba"></div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
