--- a/galeria.html
+++ b/galeria.html
@@ -94,25 +94,27 @@
         </div>
     </section>
     <!-- End Galeria -->
+    
+    <!-- Section Recoemnd -->
     <section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
         <div class="container">
             <div class="row row_contact">
                 <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt=""></div>
+                    <div class="footer_contact_icon"><img src="img/svg/suitcase-1.svg" alt="icon-suitcase"></div>
                     <div class="footer_contact_title"><h2>recomendaciones <br> para tu viaje</h2></div>
                     <div class="footer_contact_btn">
-                        <a href="#!" class="primary-btn" >Leer más</a>
+                        <a href=""  data-toggle="modal" data-target="#ModalRecomend" class="primary-btn" >Leer más</a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
                     <div class="footer_contact_icon"><img src="img/svg/placeholder.svg" alt="icon-placeholder"></div>
                     <div class="footer_contact_title"><h2>como llegar  <br> a Quillabamba</h2></div>
                     <div class="footer_contact_btn">
-                        <a href="#!" class="primary-btn" >Leer más</a>
+                        <a href=""  data-toggle="modal" data-target="#ModalMap" class="primary-btn" >Leer más</a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
-                    <div class="footer_contact_icon"><img src="img/svg/sun.svg" alt=""></div>
+                    <div class="footer_contact_icon"><img src="img/svg/sun.svg" alt="icon-sun"></div>
                     <div class="footer_contact_title"><h2>mantente informado  <br> del clima</h2></div>
                     <div class="footer_contact_btn">
                         <a href=""  data-toggle="modal" data-target="#centralModalSm" class="primary-btn" >Leer más</a>
@@ -121,7 +123,9 @@
             </div>
         </div>
     </section>
-    <!-- Modal -->
+    <!-- end Section Recoemnd -->
+
+    <!-- Modal Clima-->
     <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
@@ -144,53 +148,149 @@
             </div>
         </div>
     </div>
-<!-- End modal -->
-    <!-- Start footer -->
-    <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
-                        <div class="footer_dest text-center">
-                            <div class="logo-footer"><img src="img/logo/Recurso 2.png" alt="logo-destinos-quillabmaba"></div>
-                            <h2 class="title-logo mt-3">Destinos Quillabamba</h2>
+    <!-- End modal -->
+
+    <!-- Modal como llegar a Quillabamba-->
+    <div class="modal fade" id="ModalMap" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title text-center w-100" id="myModalLabel">Como llegar a Quillabamba</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="container">
+                    <div class="row py-3">
+                        <div class="col">
+                            <p>
+                                La Ciudad del Eterno Verano Quillabamba está ubicado hacia el Norte de la Capital Histórica del Perú Cusco a unos 222 km de distancia con un promedio de 4 horas y 55 minutos de viaje. 
+                            </p>
+                            <p>
+                                Para iniciar el viaje tenemos que dirigirnos al Terminal Terrestre Utrasic para Quillabamba, para luego abordar el ómnibus que nos llevara a nuestro destino, este terminal se encuentra en la Av. Antonio Lorena dos cuadras más abajo del Cementerio General de Almudena, u otra opción es tomar los vehículos livianos que tienen las agencias frente a este cementerio.
+                            </p>
+                            <p>
+                                En nuestra travesía atravesaremos el maravilloso Valle Sagrado de los Incas, pasando por Ollantaytambo, ciudad muy transcurrida por turistas nacionales y extranjeros que se dirigen a nuestra Maravilla Arqueológica de Machu Picchu o alrededores,  Se recomienda llevar un abrigo para el frio porque se llegara a cruzar el Abra de Málaga, el cual es el punto más alto para llegar al Valle de La Convención, donde tendremos como destino a Quillabamba la ciudad del eterno verano y capital de la Provincia de La Convención.
+                            </p>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
-                        <div class="footer_dest text-center">
-                            <div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt="slogan-destinos-quillabamba"></div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
-                        <h3>Encuentranos en</h3>
-                        <ul class="footer_social list-unstyled">
-                            <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
-                            <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
-                            <li class="social_animate"><a class="icon-3" href="https://www.instagram.com/destinosQuillabamba/" target="_blank"><span class="icon-instagram"></span></a></li>
-                            <li class="social_animate"><a class="icon-4" href="https://www.youtube.com/channel/UCRfQ0fIHHx4RrjdH5eFfi7Q" target="_blank"><span class="icon-youtube"></span></a></li>
-                        </ul>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
-                        <div class="questions_footer">
-                            <h3>¿tienes alguna pregunta?</h3>
-                            <div class="questions_icon">
-                                <ul>
-                                    <li><span class="icon icon-location2"></span>
-                                        <span class="text">Av. Bolognesi. <br>
-                                            Quillabamba, Cusco, Perú</span>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End modal -->
+
+    <!-- Modal recomendaciones-->
+    <div class="modal fade" id="ModalRecomend" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title text-center w-100" id="myModalLabel">Recomadaciones para tu viaje</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="container">
+                    <div class="row py-4">
+                        <div class="col-md-9 col-list-recomend d-flex flex-column justify-content-center">
+                            <div class="list-title-recomend"><h3>Vestimenta</h3></div>
+                            <div class="div">
+                                <ul class="unordered-list">
+                                    <li>
+                                        Independientemente de la época de visita es recomendable llevar ropa ligera y abrigadora: pantalones amplios, camisetas de algodón, zapatos de montaña, calzado deportivo. Además, no debe dejar de llevar un buen protector solar y un sombrero de ala ancha para el sol.
                                     </li>
-                                    <li><span class="icon icon-phone"></span>
-                                        <span class="text">+51 986-571790</span>
+                                </ul>
+                            </div>
+                            <div class="list-title-recomend"><h3>Seguridad</h3></div>
+                            <div class="div">
+                                <ul class="unordered-list">
+                                    <li>
+                                        Siempre mantén tus objetos personales bajo tu supervisión y cuidado. Y si tomas un taxi en la calle, siempre verifica que sea un taxi autorizado o pertenezca a alguna empresa de taxis. 
                                     </li>
-                                    <li><span class="icon icon-mail2"></span>
-                                        <span class="text">info@destinosquillabamba.com</span>
+                                    <li>
+                                        Por otro lado, no llevar grandes cantidades de dinero en las excursiones por tener un riesgo de pérdida, sino será bajo su responsabilidad.
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="list-title-recomend"><h3>Salud</h3></div>
+                            <div class="div">
+                                <ul class="unordered-list">
+                                    <li>
+                                        Durante tu viaje, hidrátate adecuadamente, sobre todo en zonas de altura. Y recuerda siempre: beber agua embotellada o debidamente tratada, y consumir alimentos en restaurantes y no en puestos ambulantes. 
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="list-title-recomend"><h3>Otras Recomadaciones</h3></div>
+                            <div class="div">
+                                <ul class="unordered-list">
+                                    <li>
+                                        La energía eléctrica en el Perú es de 220 voltios y 60 ciclos, en los hoteles de 3 estrellas a más podrán encontrar energía de 110 voltios. Ten cuidado, o infórmate bien, antes de conectar tus equipos a un interruptor.
+                                    </li>
+                                    <li>
+                                        Por último: En el Perú, al dejar una propina, no existe un monto obligatorio, estas dependen de la satisfacción respecto al servicio brindado o de la cortesía del viajero.
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+                </div>
             </div>
-        </footer>
+        </div>
+    </div>
+    <!-- End modal -->
+
+    <!-- Start footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-sm-6 col-md-3 col-logo d-flex flex-column align-items-center justify-content-center">
+                    <div class="footer_dest text-center">
+                        <div class="logo-footer"><img src="img/logo/Recurso 2.png" alt="logo-destinos-quillabmaba"></div>
+                        <h2 class="title-logo mt-3">Destinos Quillabamba</h2>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-3 col-slogan d-flex align-items-center justify-content-center">
+                    <div class="footer_dest text-center">
+                        <div class="slogan-footer"><img src="img/logo/vive disfruta viaja_1.png" alt="slogan-destinos-quillabamba"></div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-3 col-social-list d-flex flex-column align-items-center justify-content-center">
+                    <h3>Encuentranos en</h3>
+                    <ul class="footer_social list-unstyled">
+                        <li class="social_animate"><a class="icon-1" href="https://twitter.com/DestinosQ" target="_blank"><span class="icon-twitter"></span></a></li>
+                        <li class="so0cial_animate"><a class="icon-2" href="https://www.facebook.com/DestinosQuillabamba/" target="_blank"><span class="icon-facebook"></span></a></li>
+                        <li class="social_animate"><a class="icon-3" href="https://www.instagram.com/destinosQuillabamba/" target="_blank"><span class="icon-instagram"></span></a></li>
+                        <li class="social_animate"><a class="icon-4" href="https://www.youtube.com/channel/UCRfQ0fIHHx4RrjdH5eFfi7Q" target="_blank"><span class="icon-youtube"></span></a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-12 col-md-3 col-lg-3 col_info_questions d-flex justify-content-center">
+                    <div class="questions_footer">
+                        <h3>¿tienes alguna pregunta?</h3>
+                        <div class="questions_icon">
+                            <ul>
+                                <li><span class="icon icon-location2"></span>
+                                    <span class="text">Av. Francisco Bolognesi 249. <br>
+                                        Quillabamba, Cusco, Perú</span>
+                                </li>
+                                <li><span class="icon icon-phone"></span>
+                                    <span class="text">+51 986-571790</span>
+                                </li>
+                                <li><span class="icon icon-mail2"></span>
+                                    <span class="text">info@destinosquillabamba.com</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- End Footer -->
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/popper.min.js"></script>
