--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 	<div class="container">
 			<div class="navbar-brand visible-xs">
-				<a href="index.html">
+				<a href="index">
 					<img src="img/logo/LOGO BLANCO .png" class="img-fluid" alt="logo destinos Quillabamba">
 				</a>
             </div>
@@ -41,31 +41,30 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav m-auto d-flex align-items-center">
 				<li class="nav-item">
-					<a class="nav-link" href="nosotros.html">nosotros</a>
+					<a class="nav-link" href="nosotros">nosotros</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="destinos.html">Destinos</a>
+					<a class="nav-link" href="destinos-1">Destinos</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="galeria.html">Galeria</a>
+					<a class="nav-link" href="galeria">Galeria</a>
 				</li>
 				<div class="logo">
-					<a href="index.html">
+					<a href="index">
 						<img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="logo-destinos-quillabamba">
 					</a>
 				</div>
 				<li class="nav-item">
-					<a class="nav-link" href="videos.html">Videos</a>
+					<a class="nav-link" href="videos">Videos</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="blog">Blog</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="contacto.html">contacto</a>
+					<a class="nav-link" href="contacto">contacto</a>
 				</li>
 			</ul>
 		</div>
-
 	</div>
 	</nav>
 	<!-- end Navbar -->
@@ -154,7 +153,7 @@
 	
 </header>
 
-	<!-- intro -->
+<!-- intro -->
 <section class="intro">
 	<div class="container">
 		<div class="row">
@@ -166,7 +165,7 @@
 								<div class="intro-icon"><img class="img-fluid" src="img/svg/beach.svg" alt=""></div>
 								<div class="intro-text">
 									<h3>Los mejores destinos</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, non.</p>
+									<p>Disfruta de los mejores destinos de Quillabamba.</p>
 								</div>
 							</div>
 						</div>
@@ -175,7 +174,7 @@
 								<div class="intro-icon"><img class="img-fluid"	src="img/svg/wallet.svg" alt=""></div>
 								<div class="intro-text">
 									<h3>Los Mejores Precios</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, non.</p>
+									<p>Más que un paquete, ofrecemos la mejor experiencia.</p>
 								</div>
 							</div>
 						</div>
@@ -184,7 +183,7 @@
 								<div class="intro-icon"><img class="img-fluid" src="img/svg/suitcase.svg" alt=""></div>
 								<div class="intro-text">
 									<h3>Servicios Asombrosos</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, non.</p>
+									<p>Te ofrecemos la mejor calidad de servicio. y una experincia asombrosa</p>
 								</div>
 							</div>
 						</div>
@@ -214,7 +213,7 @@
 				<div class="Experience">
 					<div class="view overlay zoom rounded z-depth">
 						<img class="img-fluid" src="img/paquete-1.jpg" alt="">
-						<a href="paquetes/experiencia-1.html">
+						<a href="paquetes/experiencia-1">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
@@ -223,14 +222,14 @@
 							</a>
 						<h4 class="font-weight-bold"><strong>Tour 7 tinajas</strong></h4>
 							<p class="dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, debitis?</p>
-						<a href="paquetes/experiencia-1.html" class="btn btn-rounded btn-md primary-btn">Leer más</a>
+						<a href="paquetes/experiencia-1" class="btn btn-rounded btn-md primary-btn">Leer más</a>
 				</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-4 col-lg-4 mt-xs-4 card-thumb" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="500" data-sal-easing="ease-out-bounce">
 				<div class="Experience">
 					<div class="view overlay zoom rounded z-depth">
 						<img class="img-fluid" src="img/paquete-2.jpg" alt="">
-						<a href="paquetes/experiencia-2.html">
+						<a href="paquetes/experiencia-2">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
@@ -239,14 +238,14 @@
 							</a>
 						<h4 class="font-weight-bold"><strong>Tour Chinche</strong></h4>
 							<p class="dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, debitis?</p>
-						<a href="paquetes/experiencia-2.html" class="btn btn-rounded btn-md primary-btn">Leer más</a>
+						<a href="paquetes/experiencia-2" class="btn btn-rounded btn-md primary-btn">Leer más</a>
 				</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-4 col-lg-4 card-thumb" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="600" data-sal-easing="ease-out-bounce">
 				<div class="Experience">
 					<div class="view overlay zoom rounded z-depth">
 						<img class="img-fluid" src="img/paquete-3-city-tour.jpg" alt="">
-						<a href="paquetes/experiencia-3.html">
+						<a href="paquetes/experiencia-3">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
@@ -255,7 +254,7 @@
 							</a>
 						<h4 class="font-weight-bold"><strong>Tour Quillabamba</strong></h4>
 							<p class="dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, debitis?</p>
-						<a href="paquetes/experiencia-3.html" class="btn btn-rounded btn-md primary-btn">Leer más</a>
+						<a href="paquetes/experiencia-3" class="btn btn-rounded btn-md primary-btn">Leer más</a>
 				</div>
 			</div>
 		</div>
@@ -355,7 +354,7 @@
 					<div class="why_content text-center">
 					<a href="destinos/D-7tinajas.html"><div class="why_title">7 Tinajas</div></a>
 						<div class="why_text">
-							<p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
+							<p>Una quebrada que el agua con el tiempo tallo 7 hermosos pozos de afloraciones liticas denominadas 7 Tinajas</p>
 						</div>
 					</div>
 				</div>
@@ -376,7 +375,7 @@
 						<div class="why_content text-center">
 							<a href="destinos/D-Huayllayoc.html"><div class="why_title">Huayllayoc</div></a>
 							<div class="why_text">
-								<p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
+								<p>Realiza un recorrido por zonas de hermosos cultivos que te llevan rumbo a la catarata de Huayllayoc.</p>
 							</div>
 						</div>
 					</div>
@@ -397,7 +396,7 @@
 						<div class="why_content text-center">
 							<a href="destinos/D-CVillaRica.html"><div class="why_title">Villa Rica</div></a>
 							<div class="why_text">
-								<p>Pellentesque sit amet elementum ccumsan sit amet mattis eget, tristique at leo.</p>
+								<p>Vive una travesía de flora y de vistas asombrosas de montañas hacia una hermosa catarata.</p>
 							</div>
 						</div>
 					</div>
@@ -420,27 +419,27 @@
 			<div class="col-12 col-sm-12 col-md-6 col-lg-6" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="400" data-sal-easing="ease-out-bounce">
 				<div class="b-entry">
 					<div class="img-gradient">
-						<img src="img/paquete-1.jpg" alt="img-blog" class="img-fluid">
+						<img src="img/blog/p-echarati.jpg" alt="img-blog" class="img-fluid">
 					</div>
-					<h2 class="font-size-regular"><a href="">Señor de los temblores</a></h2>
-					<div class="meta mb-4">Destinos quillabamba <span class="mx-2">&bullet;</span> Abr 25, 2019 at 2:00 pm <span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quo explicabo ut eligendi, delectus et molestiae quisquam sunt aliquam expedita vitae! Autem dolorem laborum id error delectus necessitatibus voluptatibus beatae.</p>
+					<h2 class="font-size-regular"><a href="blog-single/3-piscinas">Las 3 mejores Piscinas de La Convención</a></h2>
+					<div class="meta mb-4 mt-2">Destinos quillabamba <span class="mx-2">&bullet;</span> Abr 25, 2019</div>
+					<p>Conoce las mejores psicinas del La Conveción. Descubre las 3 fascinantes piscinas que debes de conocer si visitas Quillabamba.</p>
 				</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-6 col-lg-6" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="500" data-sal-easing="ease-out-bounce">
 				<div class="b-entry">
 					<div class="img-gradient">
-						<img src="img/paquete-1.jpg" alt="img-blog" class="img-fluid">
+						<img src="img/blog/parque-gratrico.jpg" alt="img-blog" class="img-fluid">
 					</div>
-					<h2 class="font-size-regular"><a href="">Señor de los temblores</a></h2>
-					<div class="meta mb-4">Destinos quillabamba <span class="mx-2">&bullet;</span> Abr 25, 2019 at 2:00 pm <span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quo explicabo ut eligendi, delectus et molestiae quisquam sunt aliquam expedita vitae! Autem dolorem laborum id error delectus necessitatibus voluptatibus beatae.</p>
+					<h2 class="font-size-regular"><a href="blog-single/3-parques">3 Parques poco conocidos de Quillabamba</a></h2>
+					<div class="meta mb-4 mt-2">Destinos quillabamba <span class="mx-2">&bullet;</span> Abr 25, 2019</div>
+					<p>los 3 parques que deberias conocer. Visita estos 3 parques menos conocidos de Quillabamba.</p>
 				</div>
 			</div>
 		</div>
 		<div class="row" data-sal-duration="1200" data-sal="flip-up" data-sal-delay="300" data-sal-easing="ease-out-bounce">
 			<div class="col-12 text-center">
-				<a href="blog.html" class="btn_main">
+				<a href="blog" class="btn_main">
 					Ver todo
 					<img src="img/next.png" alt="icon-next">
 				</a>
@@ -449,19 +448,31 @@
 	</div>
 </section>
 <!-- end our blog -->
-<!-- Modal -->
+<!-- Modal como llegar a Quillabamba-->
 <div class="modal fade" id="ModalMap" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title w-100" id="myModalLabel">Como llegar a Quillabamba</h4>
+        <h4 class="modal-title text-center w-100" id="myModalLabel">Como llegar a Quillabamba</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
 	  <div class="container">
-		  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium pariatur repellat nobis deserunt laboriosam. Architecto animi et rerum ut blanditiis officiis vel veritatis expedita nulla nemo, amet sequi aliquam reprehenderit!</p>
+		  <div class="row py-3">
+			  <div class="col">
+					<p>
+						La Ciudad del Eterno Verano Quillabamba está ubicado hacia el Norte de la Capital Histórica del Perú Cusco a unos 222 km de distancia con un promedio de 4 horas y 55 minutos de viaje. 
+					</p>
+					<p>
+						Para iniciar el viaje tenemos que dirigirnos al Terminal Terrestre Utrasic para Quillabamba, para luego abordar el ómnibus que nos llevara a nuestro destino, este terminal se encuentra en la Av. Antonio Lorena dos cuadras más abajo del Cementerio General de Almudena, u otra opción es tomar los vehículos livianos que tienen las agencias frente a este cementerio.
+					</p>
+					<p>
+						En nuestra travesía atravesaremos el maravilloso Valle Sagrado de los Incas, pasando por Ollantaytambo, ciudad muy transcurrida por turistas nacionales y extranjeros que se dirigen a nuestra Maravilla Arqueológica de Machu Picchu o alrededores,  Se recomienda llevar un abrigo para el frio porque se llegara a cruzar el Abra de Málaga, el cual es el punto más alto para llegar al Valle de La Convención, donde tendremos como destino a Quillabamba la ciudad del eterno verano y capital de la Provincia de La Convención.
+					</p>
+			  </div>
+		  </div>
 	  </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
@@ -470,19 +481,60 @@
   </div>
 </div>
 <!-- End modal -->
-<!-- Modal -->
+<!-- Modal recomendaciones-->
 <div class="modal fade" id="ModalRecomend" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title w-100" id="myModalLabel">Recomadaciones para tu viajes</h4>
+        <h4 class="modal-title text-center w-100" id="myModalLabel">Recomadaciones para tu viaje</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
 	  <div class="container">
-		  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium pariatur repellat nobis deserunt laboriosam. Architecto animi et rerum ut blanditiis officiis vel veritatis expedita nulla nemo, amet sequi aliquam reprehenderit!</p>
+		  <div class="row py-4">
+			<div class="col-md-9 col-list-recomend d-flex flex-column justify-content-center">
+				<div class="list-title-recomend"><h3>Vestimenta</h3></div>
+				<div class="div">
+					<ul class="unordered-list">
+						<li>
+							Independientemente de la época de visita es recomendable llevar ropa ligera y abrigadora: pantalones amplios, camisetas de algodón, zapatos de montaña, calzado deportivo. Además, no debe dejar de llevar un buen protector solar y un sombrero de ala ancha para el sol.
+						</li>
+					</ul>
+				</div>
+				<div class="list-title-recomend"><h3>Seguridad</h3></div>
+				<div class="div">
+					<ul class="unordered-list">
+						<li>
+							Siempre mantén tus objetos personales bajo tu supervisión y cuidado. Y si tomas un taxi en la calle, siempre verifica que sea un taxi autorizado o pertenezca a alguna empresa de taxis. 
+						</li>
+						<li>
+							Por otro lado, no llevar grandes cantidades de dinero en las excursiones por tener un riesgo de pérdida, sino será bajo su responsabilidad.
+						</li>
+					</ul>
+				</div>
+				<div class="list-title-recomend"><h3>Salud</h3></div>
+				<div class="div">
+					<ul class="unordered-list">
+						<li>
+							Durante tu viaje, hidrátate adecuadamente, sobre todo en zonas de altura. Y recuerda siempre: beber agua embotellada o debidamente tratada, y consumir alimentos en restaurantes y no en puestos ambulantes. 
+						</li>
+					</ul>
+				</div>
+				<div class="list-title-recomend"><h3>Otras Recomadaciones</h3></div>
+				<div class="div">
+					<ul class="unordered-list">
+						<li>
+							La energía eléctrica en el Perú es de 220 voltios y 60 ciclos, en los hoteles de 3 estrellas a más podrán encontrar energía de 110 voltios. Ten cuidado, o infórmate bien, antes de conectar tus equipos a un interruptor.
+						</li>
+						<li>
+							Por último: En el Perú, al dejar una propina, no existe un monto obligatorio, estas dependen de la satisfacción respecto al servicio brindado o de la cortesía del viajero.
+						</li>
+					</ul>
+				</div>
+			</div>
+		  </div>
 	  </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
@@ -491,7 +543,7 @@
   </div>
 </div>
 <!-- End modal -->
-<!-- end social -->
+<!-- Start banner icon -->
 <section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
 	<div class="container">
 		<div class="row row_contact">
@@ -519,13 +571,13 @@
 		</div>
 	</div>
 </section>
-<!-- Modal -->
+<!-- Modal clima -->
 <div class="modal fade" id="centralModalSm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
+        <h4 class="modal-title text-center w-100" id="myModalLabel">El Clima en Quillabamba, La Convención</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -601,6 +653,11 @@
 <script type="text/javascript" src="js/sal.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/new.js"></script>
+<script>
+	$('.carousel').carousel({
+		interval: 2000
+	})
+</script>
 </body>
 
 </html>
